--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <a href="#">Home</a>
 
-            <a href="#">About</a>
+            <a href="about.html">About</a>
 
             <a href="contact.html">Contact</a>
 
