--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
     <head>
 
+        <html lang="en"></html>
+
+        <meta name="viewport" width="device-width" initial-scale="1">
+
         <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
 
         <link rel="stylesheet" href="style.css">
@@ -166,7 +170,7 @@
 
     <footer>
 
-        <p>Like what you see?</p>
+        <h3>Like what you see?</h3>
 
         <a href="contact.html" class="contact">Contact Me</a>
 
