updated aboutstyle.css with more responsive elements

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
     <footer>
 
-        <p>Like what you see?</p>
+        <h3>Like what you see?</h3>
 
         <a href="contact.html" class="contact">Contact Me</a>
 
