--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
     <footer>
 
-        <h3>Like what you see?</h3>
+        <h3>Like what you see?</h3#>
 
         <a href="contact.html" class="contact">Contact Me</a>
 
